# geopose_ros_tools

./: CMakeLists.txt  README.md  geopose_ros_tools_demo.rviz  package.xml  setup.cfg  setup.py
geopose_ros_tools/: geopose_to_osgb36.py  publish_geopose.py  publish_ply_pointcloud.py  publish_pointcloud.py
geopose_to_osgb36/: CMakeLists.txt  package.xml
geopose_to_osgb36/src/: geopose_to_osgb36.py
launch/: launch.py
publish_geopose/: CMakeLists.txt  package.xml
publish_geopose/src/: publish_geopose.py
resource/: download_pointcloud.sh  oshq_and_ap_north_capture_post_boresight_fix_bng_sm10.ply
src/: geopose_to_osgb36.py  kill_pcd_to_pointcloud.sh  publish_geopose.py
